# torch

./: .gitignore  ABOUT  INSTALL  MANIFEST.in  ProfileEdit.py  README.md  TODO.md  TkGui.py  TkProfileEdit.py  TkProfilePlot.py  TkTorch.py  Torch.fbp  TorchOven.py  capture.txt  crc16.py  gui.py  gui_tk.py  modbus.py  old_gui.py  requirements.txt  run.py  run.sh  setup.cfg  wxfb_out.py
app/: TkGui.py  TkProfileEdit.py  TkProfilePlot.py  TkTorch.py  __main__.py
oven/: TorchOven.py  crc16.py  modbus.py  regs.py
profiles/: PC_anneal.prfl  RoHS-profile-not-checked.prfl  cooling.prfl  default.prfl  leaded-general.txt  leaded-hotter.prfl  leaded-profile.prfl  test-error.txt  test-valid.txt  test.prfl  test2.prfl  test3.prfl
