
[metadata]
name = Torch
version = 0.1.0
author = PSU Electronics Prototyping Lab
author_email = epl@psu.edu
description = Reflow Oven RN200+ Serial Controller.
license = GPL-2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/psu-epl/torch
project_urls =
    Bug Tracker = https://github.com/psu-epl/torch/issues

classifiers =
    Development Status :: 3 - Alpha
    Framework :: Matplotlib
    Intended Audience :: Manufacturing
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages =
    app
    oven
python_requires = >=3.8
install_requires =
    matplotlib
    pyserial

include_package_data = True # Include files specified by MANIFEST.in

[options.data_files] # Specify files included in the wheel binary distribution
share/torch =
    ABOUT
    LICENSE
share/torch/profiles =
    profiles/*

[options.entry_points]
gui_scripts =
    torch = app.TkTorch:main
